css: todo-app - add babel to compile JS file

--- a/css/todo-app/index.html
+++ b/css/todo-app/index.html
@@ -13,6 +13,6 @@
 <body>
   <div id='root' class="container"></div>
 
-  <script src="./bundle.js"></script>
+  <script src="./app-compiled.js"></script>
 </body>
 </html>
