--- a/css/todo-app/index.html
+++ b/css/todo-app/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Todo APP</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.3.1/redux.js"></script>
-   <script src="https://fb.me/react-0.14.7.js"></script>
-  <script src="https://fb.me/react-dom-0.14.7.js"></script>
+  <script src="https://fb.me/react-with-addons-0.14.0.js"></script>
+  <script src="https://fb.me/react-dom-0.14.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.4.0/react-redux.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:600,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./app.css">
